--- a/agents.html
+++ b/agents.html
@@ -303,7 +303,7 @@
                 });
 
                 card.innerHTML = `
-                    <a href="${agent.link || 'coming-soon.html'}" class="block">
+                    <a href="pages/agent-detail.html?name=${encodeURIComponent(agent.name)}" class="block">
                         <div class="h-48 bg-gradient-to-br from-gray-800 to-gray-700 flex items-center justify-center transition-all duration-300 group-hover:from-gray-700 group-hover:to-gray-600">
                             <span class="text-6xl">${agent.emoji}</span>
                         </div>
