--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -1,45 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code of Conduct - AI Agentopia</title>
-    <meta name="description" content="Code of Conduct for the AI Agentopia community">
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="description" content="Code of Conduct for the AI Agentopia community" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="dark-mode">
+  </head>
+  <body class="dark-mode">
     <!-- Navigation will be included via JavaScript -->
     <div id="nav-placeholder"></div>
 
     <main class="container mx-auto px-4 py-8">
-        <div class="max-w-4xl mx-auto">
-            <h1 class="text-4xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-amber-400 to-amber-200">Code of Conduct</h1>
-            
-            <div class="prose prose-lg prose-invert mx-auto">
-                <h2>Our Pledge</h2>
-                <p>In the interest of fostering an open and welcoming environment, we as contributors and maintainers pledge to making participation in our project and our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, sex characteristics, gender identity and expression, level of experience, education, socio-economic status, nationality, personal appearance, race, religion, or sexual identity and orientation.</p>
+      <div class="max-w-4xl mx-auto">
+        <h1 class="text-4xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-amber-400 to-amber-200">
+          Code of Conduct
+        </h1>
 
-                <h2>Our Standards</h2>
-                <p>Examples of behavior that contributes to creating a positive environment include:</p>
-                <ul>
-                    <li>Using welcoming and inclusive language</li>
-                    <li>Being respectful of differing viewpoints and experiences</li>
-                    <li>Gracefully accepting constructive criticism</li>
-                    <li>Focusing on what is best for the community</li>
-                    <li>Showing empathy towards other community members</li>
-                </ul>
+        <div class="prose prose-lg prose-invert mx-auto">
+          <h2>Our Pledge</h2>
+          <p>
+            In the interest of fostering an open and welcoming environment, we as contributors and maintainers pledge to
+            making participation in our project and our community a harassment-free experience for everyone, regardless
+            of age, body size, disability, ethnicity, sex characteristics, gender identity and expression, level of
+            experience, education, socio-economic status, nationality, personal appearance, race, religion, or sexual
+            identity and orientation.
+          </p>
 
-                <h2>Our Responsibilities</h2>
-                <p>Project maintainers are responsible for clarifying the standards of acceptable behavior and are expected to take appropriate and fair corrective action in response to any instances of unacceptable behavior.</p>
+          <h2>Our Standards</h2>
+          <p>Examples of behavior that contributes to creating a positive environment include:</p>
+          <ul>
+            <li>Using welcoming and inclusive language</li>
+            <li>Being respectful of differing viewpoints and experiences</li>
+            <li>Gracefully accepting constructive criticism</li>
+            <li>Focusing on what is best for the community</li>
+            <li>Showing empathy towards other community members</li>
+          </ul>
 
-                <h2>Enforcement</h2>
-                <p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances.</p>
+          <h2>Our Responsibilities</h2>
+          <p>
+            Project maintainers are responsible for clarifying the standards of acceptable behavior and are expected to
+            take appropriate and fair corrective action in response to any instances of unacceptable behavior.
+          </p>
 
-                <h2>Attribution</h2>
-                <p>This Code of Conduct is adapted from the Contributor Covenant, version 2.0, available at https://www.contributor-covenant.org/version/2/0/code_of_conduct.html</p>
-            </div>
+          <h2>Enforcement</h2>
+          <p>
+            Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the
+            project team. All complaints will be reviewed and investigated and will result in a response that is deemed
+            necessary and appropriate to the circumstances.
+          </p>
+
+          <h2>Attribution</h2>
+          <p>
+            This Code of Conduct is adapted from the Contributor Covenant, version 2.0, available at
+            https://www.contributor-covenant.org/version/2/0/code_of_conduct.html
+          </p>
         </div>
+      </div>
     </main>
 
     <!-- Footer will be included via JavaScript -->
@@ -48,5 +66,5 @@
     <script src="js/navigation.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/footer.js"></script>
-</body>
+  </body>
 </html>
