--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,102 +1,123 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - AI Agentopia</title>
-    <meta name="description" content="Privacy Policy for AI Agentopia - Learn how we collect, use, and protect your information.">
-    
+    <meta
+      name="description"
+      content="Privacy Policy for AI Agentopia - Learn how we collect, use, and protect your information."
+    />
+
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
-    <link rel="manifest" href="site.webmanifest">
-    
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg" />
+    <link rel="manifest" href="site.webmanifest" />
+
+    <link rel="stylesheet" href="css/styles.css" />
     <!-- Add Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-            darkMode: 'class'
-        }
+      tailwind.config = {
+        darkMode: "class",
+      };
     </script>
-</head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col">
+  </head>
+  <body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col">
     <!-- Navigation will be included via JavaScript -->
     <div id="nav-placeholder"></div>
 
     <main class="container mx-auto px-6 py-32 flex-grow">
-        <div class="max-w-3xl mx-auto">
-            <h1 class="text-4xl font-bold mb-8">Privacy Policy</h1>
-            <div class="prose prose-invert max-w-none">
-                <p class="text-gray-300 mb-6">Last updated: January 13, 2025</p>
+      <div class="max-w-3xl mx-auto">
+        <h1 class="text-4xl font-bold mb-8">Privacy Policy</h1>
+        <div class="prose prose-invert max-w-none">
+          <p class="text-gray-300 mb-6">Last updated: January 13, 2025</p>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">1. Introduction</h2>
-                    <p class="text-gray-300">Welcome to AI Agentopia. We respect your privacy and are committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you visit our website.</p>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">1. Introduction</h2>
+            <p class="text-gray-300">
+              Welcome to AI Agentopia. We respect your privacy and are committed to protecting your personal data. This
+              privacy policy explains how we collect, use, and safeguard your information when you visit our website.
+            </p>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">2. Information We Collect</h2>
-                    <p class="text-gray-300 mb-4">We collect information that you provide directly to us, including:</p>
-                    <ul class="list-disc list-inside text-gray-300 mb-4">
-                        <li>Contact information (name, email address)</li>
-                        <li>Usage data (how you interact with our website)</li>
-                        <li>Technical data (IP address, browser type, device information)</li>
-                    </ul>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">2. Information We Collect</h2>
+            <p class="text-gray-300 mb-4">We collect information that you provide directly to us, including:</p>
+            <ul class="list-disc list-inside text-gray-300 mb-4">
+              <li>Contact information (name, email address)</li>
+              <li>Usage data (how you interact with our website)</li>
+              <li>Technical data (IP address, browser type, device information)</li>
+            </ul>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">3. How We Use Your Information</h2>
-                    <p class="text-gray-300 mb-4">We use the information we collect to:</p>
-                    <ul class="list-disc list-inside text-gray-300 mb-4">
-                        <li>Provide and maintain our website</li>
-                        <li>Improve and personalize your experience</li>
-                        <li>Communicate with you about updates and news</li>
-                        <li>Analyze usage patterns and optimize our services</li>
-                    </ul>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">3. How We Use Your Information</h2>
+            <p class="text-gray-300 mb-4">We use the information we collect to:</p>
+            <ul class="list-disc list-inside text-gray-300 mb-4">
+              <li>Provide and maintain our website</li>
+              <li>Improve and personalize your experience</li>
+              <li>Communicate with you about updates and news</li>
+              <li>Analyze usage patterns and optimize our services</li>
+            </ul>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">4. Cookies and Tracking Technologies</h2>
-                    <p class="text-gray-300">We use cookies and similar tracking technologies to track activity on our website and store certain information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent.</p>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">4. Cookies and Tracking Technologies</h2>
+            <p class="text-gray-300">
+              We use cookies and similar tracking technologies to track activity on our website and store certain
+              information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being
+              sent.
+            </p>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">5. Data Security</h2>
-                    <p class="text-gray-300">We implement appropriate security measures to protect your personal information. However, no method of transmission over the Internet is 100% secure, and we cannot guarantee absolute security.</p>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">5. Data Security</h2>
+            <p class="text-gray-300">
+              We implement appropriate security measures to protect your personal information. However, no method of
+              transmission over the Internet is 100% secure, and we cannot guarantee absolute security.
+            </p>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">6. Third-Party Services</h2>
-                    <p class="text-gray-300">Our website may contain links to third-party websites. We are not responsible for the privacy practices or content of these websites.</p>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">6. Third-Party Services</h2>
+            <p class="text-gray-300">
+              Our website may contain links to third-party websites. We are not responsible for the privacy practices or
+              content of these websites.
+            </p>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">7. Your Rights</h2>
-                    <p class="text-gray-300 mb-4">You have the right to:</p>
-                    <ul class="list-disc list-inside text-gray-300 mb-4">
-                        <li>Access your personal data</li>
-                        <li>Correct inaccurate data</li>
-                        <li>Request deletion of your data</li>
-                        <li>Object to our processing of your data</li>
-                    </ul>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">7. Your Rights</h2>
+            <p class="text-gray-300 mb-4">You have the right to:</p>
+            <ul class="list-disc list-inside text-gray-300 mb-4">
+              <li>Access your personal data</li>
+              <li>Correct inaccurate data</li>
+              <li>Request deletion of your data</li>
+              <li>Object to our processing of your data</li>
+            </ul>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">8. Changes to This Policy</h2>
-                    <p class="text-gray-300">We may update this privacy policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
-                </section>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">8. Changes to This Policy</h2>
+            <p class="text-gray-300">
+              We may update this privacy policy from time to time. We will notify you of any changes by posting the new
+              policy on this page.
+            </p>
+          </section>
 
-                <section class="mb-8">
-                    <h2 class="text-2xl font-semibold mb-4">9. Contact Us</h2>
-                    <p class="text-gray-300">If you have any questions about this privacy policy, please contact us at privacy@agentopia.ai</p>
-                </section>
-            </div>
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">9. Contact Us</h2>
+            <p class="text-gray-300">
+              If you have any questions about this privacy policy, please contact us at privacy@agentopia.ai
+            </p>
+          </section>
         </div>
+      </div>
     </main>
 
     <!-- Footer will be included via JavaScript -->
     <div id="footer-placeholder"></div>
 
     <script src="js/navigation.js"></script>
-</body>
+  </body>
 </html>
